--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#">Home</a>
             <a href="#">Sobre</a>
             <a href="#">Cursos</a>
-            <a href="#">Portfolio</a>
+            <a href="#">Portfólio</a>
             <a href="#">Contato</a>
         </nav>
     </header>
